jumping button fix and some minor changes

--- a/3-column-preview-card-component-main/CSS/main.css
+++ b/3-column-preview-card-component-main/CSS/main.css
@@ -62,6 +62,7 @@ section a{
    text-decoration: none;
    color: var(--BO);
    font-family: 'Lexend Deca', sans-serif;;
+   border: 2px solid  transparent;
 }
 section a:hover, section a:focus{
    background: transparent;
