--- a/3-column-preview-card-component-main/CSS/mediaQuery.css
+++ b/3-column-preview-card-component-main/CSS/mediaQuery.css
@@ -42,7 +42,7 @@
       display: flex;
       flex-direction: column;
       justify-content: center;
-      height: 100vh;
+      min-height: 100vh;
       margin: 0 14rem;
    }
    main{
